# browser-automation-cli

./: .cargoignore  .gitignore  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  audit.toml  build.rs  deny.toml  gaps.md  llms-full.pt-BR.txt  llms-full.txt  llms.pt-BR.txt  llms.txt
.cargo/: config.toml
benches/: cli_parse.rs
docs/: AGENTS.md  AGENTS.pt-BR.md  ARCHITECTURE.md  ARCHITECTURE.pt-BR.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  ROADMAP.md  ROADMAP.pt-BR.md  TESTING.md  TESTING.pt-BR.md
docs/schemas/: README.md  assert.schema.json  attr.schema.json  back.schema.json  batch-scrape.schema.json  click-at.schema.json  commands.schema.json  completions.schema.json  config.schema.json  console.schema.json  cookie.schema.json  crawl.schema.json  devtools3p.schema.json  dialog.schema.json  doctor.schema.json  drag.schema.json  emulate.schema.json  envelope-error.schema.json  envelope-success.schema.json  eval.schema.json  exec.schema.json  extension.schema.json  extract.schema.json  fill-form.schema.json  find-paths.schema.json  forward.schema.json  goto.schema.json  grab.schema.json  heap.schema.json  hover.schema.json  keys.schema.json  lighthouse.schema.json  locale.schema.json  man.schema.json  map.schema.json  mitm.schema.json  monitor.schema.json  net.schema.json  page.schema.json  parse.schema.json  (+27 more)
examples/: run_library.rs
locales/: en.ftl  pt-BR.ftl
man/: browser-automation-cli.1
scripts/: audit_bilingual_docs.sh  ci-check.sh  docs-check.sh  e2e_all_52_tools.sh  gen-completions.sh  gen-llms-txt.sh  generate_command_schemas.sh  i18n-check.sh  interior-mutability-check.sh  inventory_diff_base.sh  json-ndjson-check.sh  latency-baseline.sh  latency-check.sh  macros-check.sh  memory-check.sh  mock-lighthouse.sh  multiplatform-check.sh  ownership-check.sh  parallelism-check.sh  perf-check.sh  profile-cdp.sh  residual-check.sh  residual-stress.sh  rss-baseline.sh  shutdown-check.sh  tracing-check.sh
scripts/fixtures/e2e_ext/: manifest.json  sw.js
scripts/fixtures/e2e_page/: index.html
skill/browser-automation-cli-en/: SKILL.md
skill/browser-automation-cli-pt/: SKILL.md
skills/browser-automation-cli/: SKILL.md
skills/browser-automation-cli-en/: SKILL.md
skills/browser-automation-cli-en/evals/: queries.json
skills/browser-automation-cli-en/references/: formulas.md
skills/browser-automation-cli-pt/: SKILL.md
skills/browser-automation-cli-pt/evals/: queries.json
skills/browser-automation-cli-pt/references/: formulas.md
src/: cache.rs  cli.rs  clock.rs  color.rs  concurrency.rs  config.rs  constants.rs  envelope.rs  error.rs  find_paths.rs  i18n.rs  install.rs  json_util.rs  lib.rs  lifecycle.rs  llm_local.rs  main.rs  mitm_local.rs  output.rs  platform.rs  qr_local.rs  residual.rs  retry.rs  robots.rs  runtime_util.rs  scrape_local.rs  sg_local.rs  sheet_local.rs  telemetry.rs  test_utils.rs  validation.rs  win_job.rs  workflow_local.rs  xdg.rs
src/browser/: mod.rs
src/commands_prd/: meta.rs  mod.rs  run.rs
src/doctor/: mod.rs
src/i18n/: detect.rs  en.rs  ftl.rs  idioma.rs  mensagem.rs  mod.rs  pt_br.rs
src/native/: browser.rs  cookies.rs  element.rs  heap_snapshot.rs  interaction.rs  mod.rs  network.rs  perf_insight.rs  screenshot.rs  snapshot.rs  state.rs
src/native/cdp/: chrome.rs  client.rs  discovery.rs  lightpanda.rs  mod.rs  oxide.rs  types.rs
tests/: clap_arg_coverage.rs  clap_command_debug_assert.rs  clap_global_flag_collision.rs  cold_start.rs  devtools_envelope_behavior.rs  doctor_cli.rs  e2e_cdp_events.rs  envelope_schema.rs  golden_i18n.rs  goto_smoke.rs  manpage_cli.rs  parity_inventory.rs  parity_matrix.rs  parity_run_inventory.rs  parity_toolref_schema.rs  pipe_broken.rs  proptest_parsers.rs  residual_one_shot.rs  robots_http.rs  signal_shutdown.rs  telemetry_log_schema.rs
tests/fixtures/: document.xml  hello.docx  tool-reference.md
