[package]
name = "browser-automation-cli"
version = "0.1.4"
edition = "2021"
rust-version = "1.88.0"
authors = ["Danilo Aguiar <daniloaguiarbr@proton.me>"]
license = "MIT OR Apache-2.0"
description = "One-shot browser automation CLI for AI agents via Chrome CDP. BORN EXECUTE FINALIZE DIE. No daemon, no npm, no telemetry."
readme = "README.md"
keywords = ["browser", "automation", "ai", "cdp", "chrome"]
categories = ["command-line-utilities", "web-programming"]
repository = "https://github.com/danilo-aguiar-br/browser-automation-cli"
homepage = "https://github.com/danilo-aguiar-br/browser-automation-cli"
documentation = "https://docs.rs/browser-automation-cli"
exclude = [
    ".github/",
    "base_conhecimento_chrome-devtools-mcp-main/",
    "docs_prd/",
    "docs_rules/",
    "/gaps.md",
    ".enrich-queue.sqlite",
    ".enrich-queue.sqlite-*",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/MEMORY.md",
    "graphrag.sqlite",
    "graphrag.sqlite-*",
    "graphrag*",
    ".serena/",
    ".claude/",
    ".vscode/",
    "logs/",
    "memory/",
]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-unknown-linux-musl",
]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[[bin]]
name = "browser-automation-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
base64 = "0.22"
getrandom = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
chromiumoxide = "0.9.1"
futures = "0.3"
futures-util = "0.3"
url = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream", "blocking"] }
sha2 = "0.10"
aes-gcm = "0.10"
async-trait = "0.1"
socket2 = "0.6"
similar = "2"
time = { version = "0.3", features = ["formatting"] }
hmac = "0.12"
hex = "0.4"
chrono = "0.4"
urlencoding = "2"
clap = { version = "4", features = ["derive", "wrap_help", "string", "cargo", "color", "suggestions"] }
clap_complete = "4"
thiserror = "2"
human-panic = "2"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
robotstxt = "0.3"
aquamarine = "0.6"
directories = "5"
scraper = "0.22"
petgraph = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
rcgen = "0.14.8"
hudsucker = "0.25.0"
lopdf = "0.34"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
calamine = "0.26"
rust_xlsxwriter = "0.79"
csv = "1.3"
ignore = "0.4"
regex = "1"
qrcode = "0.14"
rqrr = "0.9"
image = "0.25"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

